@@ -36,6 +36,7 @@ import { MemberEditComponent } from './members/member-edit/member-edit.component
 import { PreventUnsavedChangesGuard } from './_guards/prevent-unsaved-changes.guard';
 import { PhotoEditorComponent } from './members/photo-editor/photo-editor.component';
 import { PaginationModule } from 'ngx-bootstrap';
+import { LikeParamsResolver } from './_resolvers/like-params.resolver';
 
 export function tokenGetter() {
     return localStorage.getItem('token');
@@ -86,6 +87,7 @@ export function tokenGetter() {
         MembersListResolver,
         MemberDetailResolver,
         MemberEditResolver,
+        LikeParamsResolver,
         PreventUnsavedChangesGuard
 
     ],
