@@ -1,3 +1,31 @@
-<p>
-  lists works!
-</p>
+<div class="text-center mt-3">
+  <h2>{{likesParam === 'Likers' ? 'Members who like me' : 'Members who I\'ve Liked'}} : {{pagination.totalItems}}</h2>
+</div>
+
+<div class="container mt-3">
+
+<div class="row">
+  <div class="btn-group">
+    <button class="btn btn-primary" [(ngModel)]="likesParam" btnRadio="Likers" (click)="loadUsers()">Members who like me</button>
+    <button class="btn btn-primary" [(ngModel)]="likesParam" btnRadio="Likees" (click)="loadUsers()">Members who I like</button>
+  </div>
+</div>
+
+<br>
+
+<div class="row">
+  <div *ngFor="let user of users" class="col-sm-6 col-md-4 col-lg-4 col-xl-2">
+    <app-member-card [user]="user"></app-member-card>
+  </div>
+</div>
+
+
+
+</div>
+
+<div class="d-flex justify-content-center">
+  <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+  [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;"
+  firstText="&laquo;" lastText="&raquo;">
+</pagination>
+</div>
