@@ -3,7 +3,7 @@
     <img src="{{user.photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}" class="card-img-top"> 
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" [routerLink]="['/members/', user.id]"  ><i class="fa fa-user"></i></button></li>
-      <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-heart"></i></button></li>
+      <li class="list-inline-item"><button class="btn btn-primary" (click)= "sendLike(user.id)"><i class="fa fa-heart"></i></button></li>
       <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-envelope"></i></button></li>
     </ul>   
   </div>
