@@ -1,5 +1,8 @@
 import { Component, OnInit, Input } from '@angular/core';
 import { User } from '../../_models/User';
+import { AuthService } from '../../_service/auth.service';
+import { UserService } from '../../_service/user.service';
+import { AlertifyService } from '../../_service/alertify.service';
 
 @Component({
   selector: 'app-member-card',
@@ -9,9 +12,21 @@ import { User } from '../../_models/User';
 export class MemberCardComponent implements OnInit {
   @Input() user: User;
 
-  constructor() { }
+  constructor(private authService: AuthService,
+    private usersService: UserService,
+    private alertify: AlertifyService) { }
 
   ngOnInit() {
   }
 
+  sendLike(recipientId: number) {
+    this.usersService.sendLike(this.authService.decodedToken.nameid, recipientId).subscribe(
+      (data) => {
+        this.alertify.success('You have liked ' + this.user.knownAs);
+      },
+      error => {
+        console.log(error);
+        this.alertify.error(error);
+      });
+  }
 }
