@@ -31,6 +31,23 @@ namespace DatingApp.API.Data
             .Where(u => u.Id != userParams.UserId)
             .Where(u => u.Gender == userParams.Gender);
 
+            if (userParams.likers)
+            {
+
+                var userLikers = await GetUserLikes(userParams.UserId, userParams.likers);
+
+                //Getting all the users who liked the current user
+                users = users.Where(u => userLikers.Contains(u.Id));
+            }
+
+            if (userParams.likees)
+            {
+                var userLikees = await GetUserLikes(userParams.UserId, userParams.likers);
+
+                //Getting all users being liked by the current users
+                users = users.Where(u => userLikees.Contains(u.Id));
+            }
+
             if (userParams.MinAge != 18 || userParams.MaxAge != 99)
             {
                 var minDob = DateTime.Today.AddYears(-userParams.MaxAge - 1);
@@ -57,6 +74,28 @@ namespace DatingApp.API.Data
             //it's here when we create async PageList and using IQueryable we add all pagination 
             //We get current page and returned back to the UserControler/GetUser 
             return await PagedList<User>.CreateAsync(users, userParams.PageNumber, userParams.PageSize);
+        }
+
+        private async Task<IEnumerable<int>> GetUserLikes(int id, bool likers) {
+            var user = await _context.Users
+            .Include(u => u.Likers)
+            .Include(u => u.Likees)
+            .FirstOrDefaultAsync(u => u.Id == id);
+            if (likers)
+            {
+                //get the liker for the currently logged in user
+                return user.Likers.Where( l => l.LikeeId == id).Select(l => l.LikerId); 
+            }
+            else {
+                // get the likee (users which been liked by the current user) for the currently logged in user
+                return user.Likees.Where( l => l.LikerId == id).Select(l => l.LikeeId); 
+            }
+        }
+
+        public async Task<Like> GetUserLike(int userId, int recipientId)
+        {
+            return await _context.Likes
+                        .FirstOrDefaultAsync(l => l.LikerId == userId && l.LikeeId == recipientId);
         }
     }
 }
