@@ -7,12 +7,13 @@ namespace DatingApp.API.Data
 {
     public interface IDatingRepository
     {
-         void Add<T> (T entity) where T : class;
-         void Delete<T> (T entity) where T: class;
-         Task<bool> SaveAll();
-         Task<PagedList<User>> GetUsers(UserParams userParams); 
-         Task<User> GetUser(int id);
-         Task<Photo> GetPhoto(int id);
+        void Add<T>(T entity) where T : class;
+        void Delete<T>(T entity) where T : class;
+        Task<bool> SaveAll();
+        Task<PagedList<User>> GetUsers(UserParams userParams);
+        Task<User> GetUser(int id);
+        Task<Photo> GetPhoto(int id);
         Task<Photo> GetMainPhotoForUser(int userId);
+        Task<Like> GetUserLike(int userId, int recipientId);
     }
 }
